# a2a-multi-agent-protocol

./: README.md  main.py  pyproject.toml  requirements.txt
ambani_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  tools.py
modi_agent/: __main__.py  agent.py  agent_executor.py  tool.py
